--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./libasync-0.0.${{ github.run_number }}-Linux.deb
-          asset_name: libasinc-0.0.${{ github.run_number }}-Linux.deb
+          asset_name: libasync-0.0.${{ github.run_number }}-Linux.deb
           asset_content_type: application/vnd.debian.binary-package
   build_doc:
     runs-on: ubuntu-latest
